[tool.poetry]
name = "j_privilege_set"
version = "0.1.0"
description = "Create more privlege sets."
authors = ["Jeremy Rodrigues <jeremydrodrigues@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
untangle = "^1.1"
pytest = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
